--- a/src/Molecules/Transactions/Transactions.css
+++ b/src/Molecules/Transactions/Transactions.css
@@ -15,6 +15,11 @@
     padding-bottom: 10px;
 }
 
+.Transactions .transactionsTable  {
+    display: flex;
+    flex-direction: column-reverse;
+}
+
 @media screen and (max-width: 800px) {
     .Transactions {
         font-size: 16px;
