--- a/src/Organisms/Popup/Popup.css
+++ b/src/Organisms/Popup/Popup.css
@@ -5,7 +5,7 @@
     bottom: 100px;
     right: calc(50% - 400px);
     left: calc(50% - 400px);
-    box-shadow: 0px 0px 40px rgba(0, 0, 0, 1);
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, .5);
     opacity: 0;
     pointer-events: none;
     transform: translateY(-50%);
@@ -26,7 +26,7 @@
 
 @media screen and (max-width: 800px) {
     .Popup {
-        width: 100vh;
+        width: 100%;
         height: 100vh;
         top: 0;
         right: 0;
