Redux Store and the Send popup are implementede

--- a/src/Atoms/CloseButton/CloseButton.css
+++ b/src/Atoms/CloseButton/CloseButton.css
@@ -9,3 +9,10 @@
 .CloseButton:hover {
     opacity: .8;
 }
+
+@media screen and (max-width: 800px) {
+    
+    .CloseButton {
+        padding: 20px
+    }
+}
