--- a/src/Atoms/SingleTransaction/SingleTransaction.css
+++ b/src/Atoms/SingleTransaction/SingleTransaction.css
@@ -42,6 +42,7 @@
 
 .SingleTransaction .amount img {
     margin-left: 10px;
+    margin-bottom: 5px;
 }
 
 .SingleTransaction.open .amount img {
@@ -118,6 +119,12 @@
     .SingleTransaction .method,
     .SingleTransaction .amount {
         font-size: 16px;
+        display: flex;
+        align-items: center;
+    }
+
+    .SingleTransaction .amount img{
+        margin-bottom: 0px;
     }
 
     .SingleTransaction.open .amount img {
