--- a/src/Atoms/SubTitle/SubTitle.css
+++ b/src/Atoms/SubTitle/SubTitle.css
@@ -4,3 +4,11 @@
     font-weight: bold;
     letter-spacing: 4.5px;
 }
+
+@media screen and (max-width: 800px) {
+    .SubTitle {
+        font-size: 35px;
+        font-weight: bold;
+        letter-spacing: 3.5px;
+    }
+}
