--- a/src/Molecules/Transactions/Transactions.css
+++ b/src/Molecules/Transactions/Transactions.css
@@ -2,6 +2,37 @@
     text-align: center;
     font-size: 22px;
     padding-top: 80px;
+    opacity: 0;
+    transition: opacity 1000ms ease-in;
+}
+
+@-webkit-keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+  
+    to {
+      opacity: 1;
+    }
+  }
+  
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+  
+    to {
+      opacity: 1;
+    }
+  }
+  
+.fadeIn {
+    -webkit-animation-name: fadeIn;
+    animation-name: fadeIn;
+    animation-duration: 600ms;
+    animation-delay: 300ms;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
 }
 
 .Transactions .no-history {
@@ -19,6 +50,8 @@
     display: flex;
     flex-direction: column-reverse;
 }
+
+
 
 @media screen and (max-width: 800px) {
     .Transactions {
