--- a/src/Atoms/BitcoinField/BitcoinField.css
+++ b/src/Atoms/BitcoinField/BitcoinField.css
@@ -10,28 +10,6 @@
     align-items: center;
 }
 
-/* .BitcoinField input {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    width: calc(100% - 130px);
-    background-color: transparent;
-    border: none;
-    outline: none;
-    font-size: 18px;
-    padding-left: 130px;
-    font-size: 25px;
-} */
-/* 
-.BitcoinField .fieldName {
-    position: relative;
-    z-index: 1;
-    pointer-events: none;
-    font-size: 25px;
-    transform: translateX(5px);
-} */
 
 .BitcoinField .decrease,
 .BitcoinField .increase {
@@ -43,9 +21,11 @@
     align-items: center;
 }
 
-.BitcoinField .decrease:hover,
-.BitcoinField .increase:hover {
-    transform: scale(1.075);
+@media screen and (min-width: 800px) {
+    .BitcoinField .decrease:hover,
+    .BitcoinField .increase:hover {
+        transform: scale(1.075);
+    }
 }
 
 .BitcoinField .decrease:active,
@@ -61,4 +41,27 @@
 .BitcoinField .coin {
     font-size: 25px;
     padding: 0 7.5px;
+}
+
+@media screen and (max-width: 800px) {
+    .BitcoinField {
+        padding: 10px 20px;
+        border-radius: 5px;
+    }
+
+    .BitcoinField .decrease,
+    .BitcoinField .increase {
+        transform: scale(0.8);
+    }
+
+    .BitcoinField .amount,
+    .BitcoinField .coin {
+        font-size: 16px;
+        padding: 0 7.5px;
+    }
+
+    .BitcoinField .decrease:active,
+    .BitcoinField .increase:active {
+        transform: scale(1.05);
+    }
 }
