--- a/src/AppContainer/App/App.css
+++ b/src/AppContainer/App/App.css
@@ -7,6 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
+  /* overflow: hidden; */
 }
 
 code {
@@ -25,14 +26,14 @@ code {
 }
 
 .App {
-  background-image: url(../../Assets/logo.svg);
+  /* background-image: url(../../Assets/logo.svg); */
   min-height: 100vh;
   width: 100vw;
   background-repeat: no-repeat;
   background-position: 45px 45px;
   background-size: 200px ;
+  /* overflow-y: scroll; */
 }
-
 
 @media screen and (min-width: 800px) {
   .App.dark {
