--- a/src/Atoms/Button/Button.css
+++ b/src/Atoms/Button/Button.css
@@ -6,25 +6,27 @@
     text-transform: uppercase;
     font-weight: bold;
     cursor: pointer;
-    background-color: transparent;
+    background-color: #191919;
     height: 65px;
     min-width: 350px;
     letter-spacing: 4px;
     width: 100%;
     max-width: 450px;
     outline: none;
+    position: relative;
+    z-index: 1;
 }
 
 @media screen and (min-width: 800px) {
     .Button:hover {
         transform: translateY(-2px);
         box-shadow: 0px 2px 4px rgb(0, 0, 0);
-        background-color: rgba(255, 255, 255, .01);
+        background-color: #202020;
     }
     
     .Button:active {
         transform: translateY(0px);
-        background-color: transparent;
+        background-color: #191919;
     }
 }
 
