--- a/src/Atoms/SingleTransaction/SingleTransaction.css
+++ b/src/Atoms/SingleTransaction/SingleTransaction.css
@@ -4,7 +4,7 @@
 }
 
 .SingleTransaction {
-    background-color: rgba(255, 255, 255, .02);
+    background-color: #191919;
     cursor: pointer;
     margin-bottom: 2px;
     border-radius: 20px;
@@ -12,13 +12,15 @@
 
 .SingleTransaction.open {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, .5);
-    background-color: rgba(255, 255, 255, .05);
+    background-color: #202020;
+    /* background-color: rgba(255, 255, 255, .05); */
 }
 
 @media screen and (min-width: 800px){
     .SingleTransaction:hover {
         box-shadow: 0px 2px 4px rgba(0, 0, 0, .5);
-        background-color: rgba(255, 255, 255, .05);
+        /* background-color: rgba(255, 255, 255, .05); */
+        background-color: #202020;
     }
 }
 
