Now using the purple theme

--- a/src/Atoms/Button/Button.css
+++ b/src/Atoms/Button/Button.css
@@ -6,7 +6,7 @@
     text-transform: uppercase;
     font-weight: bold;
     cursor: pointer;
-    background-color: #191919;
+    background-color: transparent;
     height: 65px;
     min-width: 350px;
     letter-spacing: 4px;
@@ -21,12 +21,12 @@
     .Button:hover {
         transform: translateY(-2px);
         box-shadow: 0px 2px 4px rgb(0, 0, 0);
-        background-color: #202020;
+        /* background-color: rgba(0, 0, 0, 0.05); */
     }
     
     .Button:active {
         transform: translateY(0px);
-        background-color: #191919;
+        /* background-color: transparent; */
     }
 }
 
