--- a/src/Views/PopupView/views/ConfirmationView/ConfirmationView.css
+++ b/src/Views/PopupView/views/ConfirmationView/ConfirmationView.css
@@ -1,8 +1,55 @@
 .ConfirmationView {
     text-align: center;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 80px;
 }
 
 .ConfirmationView .titleHint {
     font-size: 17px;
+    text-transform: uppercase;
+    font-weight: 500;
+    padding: 5px 0px 10px;
 }
 
+.ConfirmationView .valuesWrap {
+    padding: 30px 12% 40px;
+    font-size: 22px;
+    flex-grow: 1;
+}
+
+.ConfirmationView .valuesWrap .row {
+    display: flex;
+    padding: 10px 0px;
+}
+
+.ConfirmationView .valuesWrap .row .key {
+    flex: 1;
+    text-align: right;
+    justify-content: flex-end;
+    opacity: .5;
+}
+
+.ConfirmationView .valuesWrap .row .value {
+    flex: 4;
+    text-align: left;
+    padding-left: 15px;
+}
+
+.ConfirmationView .valuesWrap .row .key,
+.ConfirmationView .valuesWrap .row .value {
+    display: flex;
+    align-items: center;
+}
+
+.ConfirmationView .buttonsWrap {
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 12%;
+}
+
+.ConfirmationView .buttonsWrap .Button {
+    width: calc(50% - 10px);
+    min-width: unset;
+}
