--- a/src/Views/PopupView/views/SendView/SendView.css
+++ b/src/Views/PopupView/views/SendView/SendView.css
@@ -23,6 +23,7 @@
     width: 500px;
     margin: 0px auto;
     text-align: left;
+    padding-top: 40px;
 }
 
 @media screen and (max-width: 800px) {
