--- a/src/Views/PopupView/views/SuccessView/SuccessView.css
+++ b/src/Views/PopupView/views/SuccessView/SuccessView.css
@@ -1,3 +1,31 @@
 .SuccessView {
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    font-size: 22px;
+    line-height: 2;
+    text-align: center;
+    font-weight: 700;
+}  
+
+.SuccessView .text {
+    padding: 20px 0px
+}
+
+.SuccessView .icon {
+    animation: scale .5s ease-in-out forwards;
+}
+
+@keyframes scale {
+    0%{
+        transform: scale(.5);
+    }
+    75%{
+        transform: scale(1.25);
+    }
+    100%{
+        transform: scale(1);
+    }
 }
