--- a/src/Views/PopupView/views/SuccessView/SuccessView.css
+++ b/src/Views/PopupView/views/SuccessView/SuccessView.css
@@ -29,3 +29,14 @@
         transform: scale(1);
     }
 }
+
+@media screen and (max-width: 800px) {
+    .SuccessView {
+        font-size: 18px;
+        padding: 0px 20px;
+    }
+    
+    .SuccessView .icon {
+        height: 80px;
+    }
+}
