--- a/src/Views/MainView/TopInfoView.css
+++ b/src/Views/MainView/TopInfoView.css
@@ -1,11 +1,11 @@
 .TopInfoView {
     padding-top: 10px;
-    padding-left: 95%;
+    padding-left: calc(100% - 30px);
 }
 
 @media screen and (max-width: 800px) {
     .TopInfoView {
         padding-top: 10px;
-        padding-left: 95%;
+        padding-left: calc(100% - 50px);
     }
 }
