--- a/src/Views/PopupView/views/InfoView/InfoView.css
+++ b/src/Views/PopupView/views/InfoView/InfoView.css
@@ -9,9 +9,26 @@
 }
 
 .InfoView .text-body-wrap {
-    padding-top: 15px;
+    padding: 15px 0 40px;
     height: 330px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+
+@media screen and (max-width: 800px) {
+    .InfoView .donateAddress {
+        height: 100px;
+        width: 100px;
+    }   
+        
+    .InfoView .text-body-wrap {
+        padding: 20px 10px;
+        height: 270px;
+    }
+
+    .InfoView .Title {
+        letter-spacing: 0px;
+    }
 }
